Fixed Spacing issue

--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ header {
 
 .main-runes {
     display: flex;
+    gap: 0.75rem;
     justify-content: space-between;
     flex-direction: column;
     height: 100%;
@@ -122,6 +123,7 @@ header {
 
 .secondary-runes {
     display: flex;
+    gap: 0.75rem;
     justify-content: space-between;
     flex-direction: column;
     height: 100%;
